// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Index when Get Teams service endpoint returns a component with no tech debt renders the page 1`] = `
<div>
  <div
    class="container-fluid"
  >
    <div
      class="row"
    >
      <div
        class="col"
      >
        <div
          class="my-3"
        >
          <a
            class="btn my-1 btn-secondary"
            href="/all-teams"
            target="_self"
          >
            Teams
          </a>
           
          <a
            class="btn my-1 btn-secondary"
            href="/all-teams/components"
            target="_self"
          >
            Components
          </a>
           
          <a
            class="btn my-1 btn-secondary"
            href="/all-teams/tech-debts"
            target="_self"
          >
            Tech Debts
          </a>
           
          <a
            class="btn my-1 btn-secondary"
            href="/all-teams/tests"
            target="_self"
          >
            Tests
          </a>
        </div>
         
        <div
          class="card-deck"
        >
          <div
            class="card my-3 bg-dark text-white"
          >
            <!---->
            <!---->
            <div
              class="card-body"
            >
              <!---->
              <!---->
            </div>
            <!---->
            <!---->
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Index when Get Teams service endpoint returns an array of multiple teams renders the page 1`] = `
<div>
  <div
    class="container-fluid"
  >
    <div
      class="row"
    >
      <div
        class="col"
      >
        <div
          class="my-3"
        >
          <a
            class="btn my-1 btn-secondary"
            href="/all-teams"
            target="_self"
          >
            Teams
          </a>
           
          <a
            class="btn my-1 btn-secondary"
            href="/all-teams/components"
            target="_self"
          >
            Components
          </a>
           
          <a
            class="btn my-1 btn-secondary"
            href="/all-teams/tech-debts"
            target="_self"
          >
            Tech Debts
          </a>
           
          <a
            class="btn my-1 btn-secondary"
            href="/all-teams/tests"
            target="_self"
          >
            Tests
          </a>
        </div>
         
        <div
          class="card-deck"
        >
          <div
            class="card my-3 bg-dark text-white"
          >
            <!---->
            <!---->
            <div
              class="card-body"
            >
              <!---->
              <!---->
              <div
                class="card mt-1"
              >
                <!---->
                <!---->
                <header
                  class="card-header p-1"
                  role="tab"
                >
                  <button
                    aria-controls="accordion-0-0-undefined"
                    aria-expanded="true"
                    class="btn btn-info btn-block not-collapsed"
                    type="button"
                  >
                    Not Prioritized (4)
                  </button>
                </header>
                 
                <transition-stub
                  css="true"
                  enteractiveclass="collapsing"
                  enterclass=""
                  entertoclass="collapse show"
                  leaveactiveclass="collapsing"
                  leaveclass="collapse show"
                  leavetoclass="collapse"
                  role="tabpanel"
                >
                  <div
                    class="collapse show"
                    id="accordion-0-0-undefined"
                  >
                    <div
                      class="card-body"
                    >
                      <!---->
                      <!---->
                      <table
                        class="table table-dark table-bordered table-striped mt-2"
                        style="width: 100%;"
                      >
                        <thead>
                          <tr>
                            <th>
                              Name
                            </th>
                             
                            <th>
                              Tech Debts
                            </th>
                          </tr>
                        </thead>
                         
                        <tbody>
                          <tr>
                            <td
                              class="component-name table-primary"
                            >
                              <a
                                href="/components/test-id-1"
                              >
                                Test Name 1
                              </a>
                            </td>
                             
                            <td>
                              <ul>
                                <li>
                                  <span>
                                    <span
                                      class="badge badge-success"
                                    >
                                      Missing Priority
                                    </span>
                                  </span>
                                   
                                  <div>
                                    

                                    <p>
                                      Test Description 1a
                                    </p>
                                  </div>
                                   
                                  <div />
                                   
                                  <!---->
                                </li>
                                <li>
                                  <span>
                                    <span
                                      class="badge badge-success"
                                    >
                                      Missing Priority
                                    </span>
                                  </span>
                                   
                                  <div>
                                    

                                    <p>
                                      Test Description 1b
                                    </p>
                                  </div>
                                   
                                  <div />
                                   
                                  <!---->
                                </li>
                              </ul>
                            </td>
                          </tr>
                          <tr>
                            <td
                              class="component-name table-primary"
                            >
                              <a
                                href="/components/test-id-2"
                              >
                                Test Name 2
                              </a>
                            </td>
                             
                            <td>
                              <ul>
                                <li>
                                  <span>
                                    <span
                                      class="badge badge-success"
                                    >
                                      Missing Priority
                                    </span>
                                  </span>
                                   
                                  <div>
                                    

                                    <p>
                                      Test Description 2a
                                    </p>
                                  </div>
                                   
                                  <div />
                                   
                                  <!---->
                                </li>
                                <li>
                                  <span>
                                    <span
                                      class="badge badge-success"
                                    >
                                      Missing Priority
                                    </span>
                                  </span>
                                   
                                  <div>
                                    

                                    <p>
                                      Test Description 2b
                                    </p>
                                  </div>
                                   
                                  <div />
                                   
                                  <!---->
                                </li>
                              </ul>
                            </td>
                          </tr>
                        </tbody>
                      </table>
                    </div>
                  </div>
                </transition-stub>
                <!---->
                <!---->
              </div>
            </div>
            <!---->
            <!---->
          </div>
          <div
            class="card my-3 bg-dark text-white"
          >
            <!---->
            <!---->
            <div
              class="card-body"
            >
              <!---->
              <!---->
              <div
                class="card mt-1"
              >
                <!---->
                <!---->
                <header
                  class="card-header p-1"
                  role="tab"
                >
                  <button
                    aria-controls="accordion-0-1-undefined"
                    aria-expanded="true"
                    class="btn btn-info btn-block not-collapsed"
                    type="button"
                  >
                    Not Prioritized (4)
                  </button>
                </header>
                 
                <transition-stub
                  css="true"
                  enteractiveclass="collapsing"
                  enterclass=""
                  entertoclass="collapse show"
                  leaveactiveclass="collapsing"
                  leaveclass="collapse show"
                  leavetoclass="collapse"
                  role="tabpanel"
                >
                  <div
                    class="collapse show"
                    id="accordion-0-1-undefined"
                  >
                    <div
                      class="card-body"
                    >
                      <!---->
                      <!---->
                      <table
                        class="table table-dark table-bordered table-striped mt-2"
                        style="width: 100%;"
                      >
                        <thead>
                          <tr>
                            <th>
                              Name
                            </th>
                             
                            <th>
                              Tech Debts
                            </th>
                          </tr>
                        </thead>
                         
                        <tbody>
                          <tr>
                            <td
                              class="component-name table-primary"
                            >
                              <a
                                href="/components/test-id-3"
                              >
                                Test Name 3
                              </a>
                            </td>
                             
                            <td>
                              <ul>
                                <li>
                                  <span>
                                    <span
                                      class="badge badge-success"
                                    >
                                      Missing Priority
                                    </span>
                                  </span>
                                   
                                  <div>
                                    

                                    <p>
                                      Test Description 3a
                                    </p>
                                  </div>
                                   
                                  <div />
                                   
                                  <!---->
                                </li>
                                <li>
                                  <span>
                                    <span
                                      class="badge badge-success"
                                    >
                                      Missing Priority
                                    </span>
                                  </span>
                                   
                                  <div>
                                    

                                    <p>
                                      Test Description 3b
                                    </p>
                                  </div>
                                   
                                  <div />
                                   
                                  <!---->
                                </li>
                              </ul>
                            </td>
                          </tr>
                          <tr>
                            <td
                              class="component-name table-primary"
                            >
                              <a
                                href="/components/test-id-4"
                              >
                                Test Name 4
                              </a>
                            </td>
                             
                            <td>
                              <ul>
                                <li>
                                  <span>
                                    <span
                                      class="badge badge-success"
                                    >
                                      Missing Priority
                                    </span>
                                  </span>
                                   
                                  <div>
                                    

                                    <p>
                                      Test Description 4a
                                    </p>
                                  </div>
                                   
                                  <div />
                                   
                                  <!---->
                                </li>
                                <li>
                                  <span>
                                    <span
                                      class="badge badge-success"
                                    >
                                      Missing Priority
                                    </span>
                                  </span>
                                   
                                  <div>
                                    

                                    <p>
                                      Test Description 4b
                                    </p>
                                  </div>
                                   
                                  <div />
                                   
                                  <!---->
                                </li>
                              </ul>
                            </td>
                          </tr>
                        </tbody>
                      </table>
                    </div>
                  </div>
                </transition-stub>
                <!---->
                <!---->
              </div>
            </div>
            <!---->
            <!---->
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Index when Get Teams service endpoint returns an empty array renders the page 1`] = `
<div>
  <div
    class="container-fluid"
  >
    <div
      class="row"
    >
      <div
        class="col"
      >
        <div
          class="my-3"
        >
          <a
            class="btn my-1 btn-secondary"
            href="/all-teams"
            target="_self"
          >
            Teams
          </a>
           
          <a
            class="btn my-1 btn-secondary"
            href="/all-teams/components"
            target="_self"
          >
            Components
          </a>
           
          <a
            class="btn my-1 btn-secondary"
            href="/all-teams/tech-debts"
            target="_self"
          >
            Tech Debts
          </a>
           
          <a
            class="btn my-1 btn-secondary"
            href="/all-teams/tests"
            target="_self"
          >
            Tests
          </a>
        </div>
         
      </div>
    </div>
  </div>
</div>
`;

exports[`Index when Get Teams service endpoint returns more than 3 teams renders 3 teams per row 1`] = `
<div>
  <div
    class="container-fluid"
  >
    <div
      class="row"
    >
      <div
        class="col"
      >
        <div
          class="my-3"
        >
          <a
            class="btn my-1 btn-secondary"
            href="/all-teams"
            target="_self"
          >
            Teams
          </a>
           
          <a
            class="btn my-1 btn-secondary"
            href="/all-teams/components"
            target="_self"
          >
            Components
          </a>
           
          <a
            class="btn my-1 btn-secondary"
            href="/all-teams/tech-debts"
            target="_self"
          >
            Tech Debts
          </a>
           
          <a
            class="btn my-1 btn-secondary"
            href="/all-teams/tests"
            target="_self"
          >
            Tests
          </a>
        </div>
         
        <div
          class="card-deck"
        >
          <div
            class="card my-3 bg-dark text-white"
          >
            <!---->
            <!---->
            <div
              class="card-body"
            >
              <!---->
              <!---->
            </div>
            <!---->
            <!---->
          </div>
          <div
            class="card my-3 bg-dark text-white"
          >
            <!---->
            <!---->
            <div
              class="card-body"
            >
              <!---->
              <!---->
            </div>
            <!---->
            <!---->
          </div>
          <div
            class="card my-3 bg-dark text-white"
          >
            <!---->
            <!---->
            <div
              class="card-body"
            >
              <!---->
              <!---->
            </div>
            <!---->
            <!---->
          </div>
        </div>
        <div
          class="card-deck"
        >
          <div
            class="card my-3 bg-dark text-white"
          >
            <!---->
            <!---->
            <div
              class="card-body"
            >
              <!---->
              <!---->
            </div>
            <!---->
            <!---->
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Index when Get Teams service endpoint returns tech debts for all priorities, including undefined renders all priorities, including undefined 1`] = `
<div>
  <div
    class="container-fluid"
  >
    <div
      class="row"
    >
      <div
        class="col"
      >
        <div
          class="my-3"
        >
          <a
            class="btn my-1 btn-secondary"
            href="/all-teams"
            target="_self"
          >
            Teams
          </a>
           
          <a
            class="btn my-1 btn-secondary"
            href="/all-teams/components"
            target="_self"
          >
            Components
          </a>
           
          <a
            class="btn my-1 btn-secondary"
            href="/all-teams/tech-debts"
            target="_self"
          >
            Tech Debts
          </a>
           
          <a
            class="btn my-1 btn-secondary"
            href="/all-teams/tests"
            target="_self"
          >
            Tests
          </a>
        </div>
         
        <div
          class="card-deck"
        >
          <div
            class="card my-3 bg-dark text-white"
          >
            <!---->
            <!---->
            <div
              class="card-body"
            >
              <!---->
              <!---->
              <div
                class="card mt-1"
              >
                <!---->
                <!---->
                <header
                  class="card-header p-1"
                  role="tab"
                >
                  <button
                    aria-controls="accordion-0-0-very-high"
                    aria-expanded="true"
                    class="btn btn-info btn-block not-collapsed"
                    type="button"
                  >
                    Very High (1)
                  </button>
                </header>
                 
                <transition-stub
                  css="true"
                  enteractiveclass="collapsing"
                  enterclass=""
                  entertoclass="collapse show"
                  leaveactiveclass="collapsing"
                  leaveclass="collapse show"
                  leavetoclass="collapse"
                  role="tabpanel"
                >
                  <div
                    class="collapse show"
                    id="accordion-0-0-very-high"
                  >
                    <div
                      class="card-body"
                    >
                      <!---->
                      <!---->
                      <table
                        class="table table-dark table-bordered table-striped mt-2"
                        style="width: 100%;"
                      >
                        <thead>
                          <tr>
                            <th>
                              Name
                            </th>
                             
                            <th>
                              Tech Debts
                            </th>
                          </tr>
                        </thead>
                         
                        <tbody>
                          <tr>
                            <td
                              class="component-name table-primary"
                            >
                              <a
                                href="/components/test-id-1"
                              >
                                Test Name 1
                              </a>
                            </td>
                             
                            <td>
                              <ul>
                                <li>
                                  <span>
                                    <span
                                      class="badge badge-danger"
                                    >
                                      Very High
                                    </span>
                                  </span>
                                   
                                  <div>
                                    

                                    <p>
                                      Test Description 1a
                                    </p>
                                  </div>
                                   
                                  <div />
                                   
                                  <!---->
                                </li>
                              </ul>
                            </td>
                          </tr>
                        </tbody>
                      </table>
                    </div>
                  </div>
                </transition-stub>
                <!---->
                <!---->
              </div>
              <div
                class="card mt-1"
              >
                <!---->
                <!---->
                <header
                  class="card-header p-1"
                  role="tab"
                >
                  <button
                    aria-controls="accordion-0-0-high"
                    aria-expanded="false"
                    class="btn btn-info btn-block collapsed"
                    type="button"
                  >
                    High (1)
                  </button>
                </header>
                 
                <transition-stub
                  css="true"
                  enteractiveclass="collapsing"
                  enterclass=""
                  entertoclass="collapse show"
                  leaveactiveclass="collapsing"
                  leaveclass="collapse show"
                  leavetoclass="collapse"
                  role="tabpanel"
                >
                  <div
                    class="collapse"
                    id="accordion-0-0-high"
                    style="display: none;"
                  >
                    <div
                      class="card-body"
                    >
                      <!---->
                      <!---->
                      <table
                        class="table table-dark table-bordered table-striped mt-2"
                        style="width: 100%;"
                      >
                        <thead>
                          <tr>
                            <th>
                              Name
                            </th>
                             
                            <th>
                              Tech Debts
                            </th>
                          </tr>
                        </thead>
                         
                        <tbody>
                          <tr>
                            <td
                              class="component-name table-primary"
                            >
                              <a
                                href="/components/test-id-1"
                              >
                                Test Name 1
                              </a>
                            </td>
                             
                            <td>
                              <ul>
                                <li>
                                  <span>
                                    <span
                                      class="badge badge-warning"
                                    >
                                      High
                                    </span>
                                  </span>
                                   
                                  <div>
                                    

                                    <p>
                                      Test Description 1b
                                    </p>
                                  </div>
                                   
                                  <div />
                                   
                                  <!---->
                                </li>
                              </ul>
                            </td>
                          </tr>
                        </tbody>
                      </table>
                    </div>
                  </div>
                </transition-stub>
                <!---->
                <!---->
              </div>
              <div
                class="card mt-1"
              >
                <!---->
                <!---->
                <header
                  class="card-header p-1"
                  role="tab"
                >
                  <button
                    aria-controls="accordion-0-0-medium"
                    aria-expanded="false"
                    class="btn btn-info btn-block collapsed"
                    type="button"
                  >
                    Medium (1)
                  </button>
                </header>
                 
                <transition-stub
                  css="true"
                  enteractiveclass="collapsing"
                  enterclass=""
                  entertoclass="collapse show"
                  leaveactiveclass="collapsing"
                  leaveclass="collapse show"
                  leavetoclass="collapse"
                  role="tabpanel"
                >
                  <div
                    class="collapse"
                    id="accordion-0-0-medium"
                    style="display: none;"
                  >
                    <div
                      class="card-body"
                    >
                      <!---->
                      <!---->
                      <table
                        class="table table-dark table-bordered table-striped mt-2"
                        style="width: 100%;"
                      >
                        <thead>
                          <tr>
                            <th>
                              Name
                            </th>
                             
                            <th>
                              Tech Debts
                            </th>
                          </tr>
                        </thead>
                         
                        <tbody>
                          <tr>
                            <td
                              class="component-name table-primary"
                            >
                              <a
                                href="/components/test-id-1"
                              >
                                Test Name 1
                              </a>
                            </td>
                             
                            <td>
                              <ul>
                                <li>
                                  <span>
                                    <span
                                      class="badge badge-info"
                                    >
                                      Medium
                                    </span>
                                  </span>
                                   
                                  <div>
                                    

                                    <p>
                                      Test Description 1c
                                    </p>
                                  </div>
                                   
                                  <div />
                                   
                                  <!---->
                                </li>
                              </ul>
                            </td>
                          </tr>
                        </tbody>
                      </table>
                    </div>
                  </div>
                </transition-stub>
                <!---->
                <!---->
              </div>
              <div
                class="card mt-1"
              >
                <!---->
                <!---->
                <header
                  class="card-header p-1"
                  role="tab"
                >
                  <button
                    aria-controls="accordion-0-0-low"
                    aria-expanded="false"
                    class="btn btn-info btn-block collapsed"
                    type="button"
                  >
                    Low (1)
                  </button>
                </header>
                 
                <transition-stub
                  css="true"
                  enteractiveclass="collapsing"
                  enterclass=""
                  entertoclass="collapse show"
                  leaveactiveclass="collapsing"
                  leaveclass="collapse show"
                  leavetoclass="collapse"
                  role="tabpanel"
                >
                  <div
                    class="collapse"
                    id="accordion-0-0-low"
                    style="display: none;"
                  >
                    <div
                      class="card-body"
                    >
                      <!---->
                      <!---->
                      <table
                        class="table table-dark table-bordered table-striped mt-2"
                        style="width: 100%;"
                      >
                        <thead>
                          <tr>
                            <th>
                              Name
                            </th>
                             
                            <th>
                              Tech Debts
                            </th>
                          </tr>
                        </thead>
                         
                        <tbody>
                          <tr>
                            <td
                              class="component-name table-primary"
                            >
                              <a
                                href="/components/test-id-1"
                              >
                                Test Name 1
                              </a>
                            </td>
                             
                            <td>
                              <ul>
                                <li>
                                  <span>
                                    <span
                                      class="badge badge-primary"
                                    >
                                      Low
                                    </span>
                                  </span>
                                   
                                  <div>
                                    

                                    <p>
                                      Test Description 1d
                                    </p>
                                  </div>
                                   
                                  <div />
                                   
                                  <!---->
                                </li>
                              </ul>
                            </td>
                          </tr>
                        </tbody>
                      </table>
                    </div>
                  </div>
                </transition-stub>
                <!---->
                <!---->
              </div>
              <div
                class="card mt-1"
              >
                <!---->
                <!---->
                <header
                  class="card-header p-1"
                  role="tab"
                >
                  <button
                    aria-controls="accordion-0-0-undefined"
                    aria-expanded="false"
                    class="btn btn-info btn-block collapsed"
                    type="button"
                  >
                    Not Prioritized (1)
                  </button>
                </header>
                 
                <transition-stub
                  css="true"
                  enteractiveclass="collapsing"
                  enterclass=""
                  entertoclass="collapse show"
                  leaveactiveclass="collapsing"
                  leaveclass="collapse show"
                  leavetoclass="collapse"
                  role="tabpanel"
                >
                  <div
                    class="collapse"
                    id="accordion-0-0-undefined"
                    style="display: none;"
                  >
                    <div
                      class="card-body"
                    >
                      <!---->
                      <!---->
                      <table
                        class="table table-dark table-bordered table-striped mt-2"
                        style="width: 100%;"
                      >
                        <thead>
                          <tr>
                            <th>
                              Name
                            </th>
                             
                            <th>
                              Tech Debts
                            </th>
                          </tr>
                        </thead>
                         
                        <tbody>
                          <tr>
                            <td
                              class="component-name table-primary"
                            >
                              <a
                                href="/components/test-id-1"
                              >
                                Test Name 1
                              </a>
                            </td>
                             
                            <td>
                              <ul>
                                <li>
                                  <span>
                                    <span
                                      class="badge badge-success"
                                    >
                                      Missing Priority
                                    </span>
                                  </span>
                                   
                                  <div>
                                    

                                    <p>
                                      Test Description 1e
                                    </p>
                                  </div>
                                   
                                  <div />
                                   
                                  <!---->
                                </li>
                              </ul>
                            </td>
                          </tr>
                        </tbody>
                      </table>
                    </div>
                  </div>
                </transition-stub>
                <!---->
                <!---->
              </div>
            </div>
            <!---->
            <!---->
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
